--- a/src/package.xml
+++ b/src/package.xml
@@ -18,6 +18,10 @@
     </types>
     <types>
         <members>*</members>
+        <name>CustomApplication</name>
+    </types>
+    <types>
+        <members>*</members>
         <name>CustomObject</name>
     </types>
     <types>
